[tool.poetry]
name = "graph_nd"
version = "0.0.1a"
description = "A Python package for building powerful end-to-end agentic GraphRAG systems with a simple, intuitive API"
authors = ["Zach Blumenfeld <zblumenf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zach-blumenfeld/graph-nd"
packages = [{include = "graph_nd"}]

[tool.poetry.dependencies]
python = ">=3.10"
neo4j = "*"
langchain-core = "*"
langchain-openai = "*"
langgraph = "*"
pandas = "*"
python-dotenv = "*"
PyPDF2 = "*"
tqdm = "*"
PyYAML = "*"
pydantic = "*"
nest-asyncio = "*"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poetry.group.test.dependencies]
pytest = "*"
nbconvert = "*"
nbformat = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"