[tool.poetry]
name = "graph_nd"
version = "0.0.2"
description = "A Python package for building powerful end-to-end agentic GraphRAG systems with a simple, intuitive API"
authors = ["Zach Blumenfeld <zblumenf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zach-blumenfeld/graph-nd"
packages = [{include = "graph_nd"}]
documentation = "https://graph-nd.readthedocs.io/"


[tool.poetry.dependencies]
python = ">=3.10"
neo4j = "*"
langchain-core = "*"
langchain-openai = "*"
langgraph = "*"
pandas = "*"
python-dotenv = "*"
PyPDF2 = "*"
tqdm = "*"
PyYAML = "*"
pydantic = "*"
nest-asyncio = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poetry.group.test.dependencies]
pytest = "*"
nbconvert = "*"
nbformat = "*"
jupyter = "*"

[tool.poetry.group.dev.dependencies]
sphinx = "<=7.2.6"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "<=3.0.1"
sphinx-copybutton = "^0.5.2"
myst-parser = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"